Making plots smaller

--- a/notebooks/chung/training_visualizations.ipynb
+++ b/notebooks/chung/training_visualizations.ipynb
@@ -69,9 +69,9 @@
     "* The `model_name` can be one of `['lstm', 'gru', 'tanh']`.\n",
     "* The `data_type` can be one of `['train', 'valid']`, which is an example of which particular dataset split.\n",
     "\n",
-    "We use `interact` widget to visualize the change in the example as shown below. The slider can be moved to see results in latter epochs.\n",
+    "We use `interact` widget to visualize the change in the example as shown below. The slider can be moved to see results in latter epochs. The first visualized image is the predicted music sequence while the second visualized image is the ground truth music sequence.\n",
     "\n",
-    "First, let's check the difference between GRU and LSTM on the JSB validation set.\n",
+    "First, let's check the difference between GRU, LSTM, Tanh on the JSB validation set.\n",
     "\n",
     "#### GRU on JSB Validation Set"
    ]
@@ -84,12 +84,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1373b159072c469d9fd917c5eb791619",
+       "model_id": "5cfe0a301e564bcca653885b146d2b5c",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=0, description='Epoch:', layout=Layout(width='90%'), max=499), Output())…"
+       "interactive(children=(IntSlider(value=70, description='Epoch:', layout=Layout(width='90%'), max=499), Output()…"
       ]
      },
      "metadata": {},
@@ -99,7 +99,7 @@
    "source": [
     "visual_func = visualize_music_training('jsb', 'gru', 'valid')\n",
     "_ = interact(visual_func, img_idx=IntSlider(description='Epoch:',\n",
-    "                            value=0, min=0, max=499, step=1,\n",
+    "                            value=70, min=0, max=499, step=1,\n",
     "                            layout=Layout(width='90%')))"
    ]
   },
@@ -118,12 +118,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d04561c6559b4293b5b7f0f6e0357ebb",
+       "model_id": "0091773050d2461ebe42f2261b791bcb",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=0, description='Epoch:', layout=Layout(width='90%'), max=499), Output())…"
+       "interactive(children=(IntSlider(value=70, description='Epoch:', layout=Layout(width='90%'), max=499), Output()…"
       ]
      },
      "metadata": {},
@@ -133,7 +133,7 @@
    "source": [
     "visual_func = visualize_music_training('jsb', 'lstm', 'valid')\n",
     "_ = interact(visual_func, img_idx=IntSlider(description='Epoch:',\n",
-    "                            value=0, min=0, max=499, step=1,\n",
+    "                            value=70, min=0, max=499, step=1,\n",
     "                            layout=Layout(width='90%')))"
    ]
   },
@@ -141,13 +141,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It seems that GRU has never been able to really learn the notes at the top while LSTM generalized somewhat well for the top notes. The top notes on the GRU predictions are quite dense when it should be sparser.\n",
-    "\n",
-    "The notes that are singled out and not really connected with others are the hardest to learn for these models. It should be noted that LSTM seem to have generalized the structure of the music quite well, especially for the notes at the bottom.\n",
-    "\n",
-    "We can also see the difference for long music pieces by comparing LSTM with Tanh in the Nottingham dataset.\n",
-    "\n",
-    "#### LSTM on Nottingham Validation Set"
+    "#### Tanh RNN on JSB Validation Set"
    ]
   },
   {
@@ -158,12 +152,52 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1d76efdc83fd4c2aad5008c481d429ef",
+       "model_id": "6592bf2e06d140cdad909d9937cbbc68",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=0, description='Epoch:', layout=Layout(width='90%'), max=499), Output())…"
+       "interactive(children=(IntSlider(value=70, description='Epoch:', layout=Layout(width='90%'), max=499), Output()…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "visual_func = visualize_music_training('jsb', 'tanh', 'valid')\n",
+    "_ = interact(visual_func, img_idx=IntSlider(description='Epoch:',\n",
+    "                            value=70, min=0, max=499, step=1,\n",
+    "                            layout=Layout(width='90%')))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It seems that GRU has never been able to really learn the notes at the top while LSTM generalized somewhat well for the top notes. The top notes on the GRU predictions are quite dense when it should be sparser. On the other hand, Tanh have trouble generalizing the basic structure of the music (like chords) for most of the epochs.\n",
+    "\n",
+    "The notes that are singled out and not really connected with others are the hardest to learn for these models. It should be noted that LSTM seem to have generalized the structure of the music quite well, especially for the notes at the bottom.\n",
+    "\n",
+    "We can also see the difference for long music pieces by comparing LSTM with Tanh in the Nottingham dataset.\n",
+    "\n",
+    "#### LSTM on Nottingham Validation Set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4cc8a144b6e546558df69e893cfd2344",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=221, description='Epoch:', layout=Layout(width='90%'), max=499), Output(…"
       ]
      },
      "metadata": {},
@@ -173,7 +207,7 @@
    "source": [
     "visual_func = visualize_music_training('nott', 'lstm', 'valid')\n",
     "_ = interact(visual_func, img_idx=IntSlider(description='Epoch:',\n",
-    "                            value=0, min=0, max=499, step=1,\n",
+    "                            value=221, min=0, max=499, step=1,\n",
     "                            layout=Layout(width='90%')))"
    ]
   },
@@ -186,18 +220,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c8043d26c3924124b2c7182413facdc7",
+       "model_id": "9422d7264b4a4dfd9cf5378e52e46c80",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=0, description='Epoch:', layout=Layout(width='90%'), max=499), Output())…"
+       "interactive(children=(IntSlider(value=221, description='Epoch:', layout=Layout(width='90%'), max=499), Output(…"
       ]
      },
      "metadata": {},
@@ -207,7 +241,7 @@
    "source": [
     "visual_func = visualize_music_training('nott', 'tanh', 'valid')\n",
     "_ = interact(visual_func, img_idx=IntSlider(description='Epoch:',\n",
-    "                            value=0, min=0, max=499, step=1,\n",
+    "                            value=221, min=0, max=499, step=1,\n",
     "                            layout=Layout(width='90%')))"
    ]
   },
@@ -224,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,13 +297,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "609db33124e94916b8c966e2c741abcc",
+       "model_id": "8cceac65b11b42a488207d0f4105afa0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -297,13 +331,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ee925bced58c44b79f30d39e3a411ad1",
+       "model_id": "ecc65bbd176e4a5db2c4eda2dd2ed5f4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -331,13 +365,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "af9566b4569e4722bf3c65d3bd80dd8f",
+       "model_id": "db8f1efa59ee4e8ab47ff9d894fb5d28",
        "version_major": 2,
        "version_minor": 0
       },
