Added some initial information

--- a/notebooks/chung/training_visualizations.ipynb
+++ b/notebooks/chung/training_visualizations.ipynb
@@ -186,13 +186,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4cc8a144b6e546558df69e893cfd2344",
+       "model_id": "c2dcfea3df16465cb24bf80658c6f237",
        "version_major": 2,
        "version_minor": 0
       },
@@ -205,7 +207,7 @@
     }
    ],
    "source": [
-    "visual_func = visualize_music_training('nott', 'lstm', 'valid')\n",
+    "visual_func = visualize_music_training('muse', 'lstm', 'valid')\n",
     "_ = interact(visual_func, img_idx=IntSlider(description='Epoch:',\n",
     "                            value=221, min=0, max=499, step=1,\n",
     "                            layout=Layout(width='90%')))"
