--- a/notebooks/chung/training_visualizations.ipynb
+++ b/notebooks/chung/training_visualizations.ipynb
@@ -84,7 +84,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5cfe0a301e564bcca653885b146d2b5c",
+       "model_id": "508c70131a71492083cadb6505f9ca3e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -118,7 +118,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0091773050d2461ebe42f2261b791bcb",
+       "model_id": "3bcff619789e4327b4e8cc052d63e3d7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -152,7 +152,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6592bf2e06d140cdad909d9937cbbc68",
+       "model_id": "7c8ae8ea38d148febc85d7927b7295ff",
        "version_major": 2,
        "version_minor": 0
       },
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {
     "scrolled": false
    },
@@ -194,7 +194,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c2dcfea3df16465cb24bf80658c6f237",
+       "model_id": "3350309378534b2298b8dc0d75da6919",
        "version_major": 2,
        "version_minor": 0
       },
@@ -207,7 +207,7 @@
     }
    ],
    "source": [
-    "visual_func = visualize_music_training('muse', 'lstm', 'valid')\n",
+    "visual_func = visualize_music_training('nott', 'lstm', 'valid')\n",
     "_ = interact(visual_func, img_idx=IntSlider(description='Epoch:',\n",
     "                            value=221, min=0, max=499, step=1,\n",
     "                            layout=Layout(width='90%')))"
@@ -228,7 +228,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9422d7264b4a4dfd9cf5378e52e46c80",
+       "model_id": "aea4c819393a4caa8c09c92b607a4f29",
        "version_major": 2,
        "version_minor": 0
       },
@@ -305,7 +305,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8cceac65b11b42a488207d0f4105afa0",
+       "model_id": "8332bf5211714d5a8496f5bab4549575",
        "version_major": 2,
        "version_minor": 0
       },
@@ -339,7 +339,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ecc65bbd176e4a5db2c4eda2dd2ed5f4",
+       "model_id": "a005c201c2e642b9a5c2c7bc1f12a4ac",
        "version_major": 2,
        "version_minor": 0
       },
@@ -373,7 +373,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "db8f1efa59ee4e8ab47ff9d894fb5d28",
+       "model_id": "9f5397c4831b434d8b3e69f476f643b4",
        "version_major": 2,
        "version_minor": 0
       },
