--- a/notebooks/chung/training_visualizations.ipynb
+++ b/notebooks/chung/training_visualizations.ipynb
@@ -179,7 +179,7 @@
     "\n",
     "The notes that are singled out and not really connected with others are the hardest to learn for these models. It should be noted that LSTM seem to have generalized the structure of the music quite well, especially for the notes at the bottom.\n",
     "\n",
-    "We can also see the difference for long music pieces by comparing LSTM with Tanh in the Nottingham dataset.\n",
+    "We can also see the difference for long music pieces by comparing LSTM and GRU with Tanh in the Nottingham dataset.\n",
     "\n",
     "#### LSTM on Nottingham Validation Set"
    ]
@@ -208,6 +208,40 @@
    ],
    "source": [
     "visual_func = visualize_music_training('nott', 'lstm', 'valid')\n",
+    "_ = interact(visual_func, img_idx=IntSlider(description='Epoch:',\n",
+    "                            value=221, min=0, max=499, step=1,\n",
+    "                            layout=Layout(width='90%')))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### GRU on Nottingham Validation Set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "65f3b17cc23a4a7299af67d306160129",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=221, description='Epoch:', layout=Layout(width='90%'), max=499), Output(…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "visual_func = visualize_music_training('nott', 'gru', 'valid')\n",
     "_ = interact(visual_func, img_idx=IntSlider(description='Epoch:',\n",
     "                            value=221, min=0, max=499, step=1,\n",
     "                            layout=Layout(width='90%')))"
